-
Type:
Bug
-
Status: Closed
-
Priority:
Minor
-
Resolution: Fixed
-
Affects Version/s: 0.9.1
-
Fix Version/s: 0.9.2
-
Component/s: C# - Compiler, Compiler (General), Delphi - Compiler
-
Labels:None
-
Environment:
all
-
Patch Info:Patch Available
As reported in THRIFT-2558, at several places in the Thrift language code generators an attenpt is made to throw a string by adding a string literal ("") and an int (t_base_type::t_base) in several places:
throw "compiler error: no C# name for base type " + tbase->get_base();
Additionally, at several places a wrong language name in these eror messages is used, probably due to the fact that most code generators are implemented re-using another, similar language's code generator.
- is a clone of
-
THRIFT-2558 CSharp compiler generator tries to concat ints with strings using +
-
- Closed
-