THRIFT-2560 Thrift compiler generator tries to concat ints with strings using + Client: Compiler Patch: Jens Geyer