compiler/cpp/src/generate/t_ocaml_generator.cc
@@ -1462,7 +1462,7 @@ void t_ocaml_generator::generate_deserialize_type(ofstream &out,
       out << "readDouble";
       break;
     default:
-      throw "compiler error: no PHP name for base type " + t_base_type::t_base_name(tbase);
+      throw "compiler error: no ocaml name for base type " + t_base_type::t_base_name(tbase);
     }
   } else if (type->is_enum()) {
     string ename = capitalize(type->get_name());
